@@ -1,7 +1,7 @@
 [Icon Theme]
 Name=nimbus
 Inherits=Tango
-Directories=12x12/actions,12x12/emblems,12x12/places,16x16/actions,16x16/apps,16x16/categories,16x16/devices,16x16/emblems,16x16/places,16x16/mimetypes,16x16/status,192x192/apps,192x192/categories,192x192/devices,192x192/places,192x192/mimetypes,20x20/status,24x24/actions,24x24/animations,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/places,24x24/mimetypes,24x24/status,32x32/actions,32x32/apps,32x32/categories,32x32/devices,32x32/emblems,32x32/places,32x32/mimetypes,32x32/status,36x36/actions,36x36/animations,36x36/apps,36x36/categories,36x36/devices,36x36/places,36x36/mimetypes,48x48/actions,48x48/animations,48x48/apps,48x48/categories,48x48/devices,48x48/places,48x48/mimetypes,48x48/status,48x48/emblems,72x72/apps,72x72/categories,72x72/places,72x72/mimetypes,96x96/apps,96x96/categories,96x96/devices,96x96/places,96x96/mimetypes
+Directories=12x12/actions,12x12/emblems,12x12/places,16x16/actions,16x16/apps,16x16/categories,16x16/devices,16x16/emblems,16x16/places,16x16/mimetypes,16x16/status,20x20/status,24x24/actions,24x24/animations,24x24/apps,24x24/categories,24x24/devices,24x24/emblems,24x24/places,24x24/mimetypes,24x24/status,32x32/actions,32x32/apps,32x32/categories,32x32/devices,32x32/emblems,32x32/places,32x32/mimetypes,32x32/status,36x36/actions,36x36/animations,36x36/apps,36x36/categories,36x36/devices,36x36/places,36x36/mimetypes,48x48/actions,48x48/animations,48x48/apps,48x48/categories,48x48/devices,48x48/places,48x48/mimetypes,48x48/status,48x48/emblems,72x72/apps,72x72/categories,72x72/places,72x72/mimetypes,96x96/apps,96x96/categories,96x96/devices,96x96/places,96x96/mimetypes,192x192/apps,192x192/categories,192x192/devices,192x192/places,192x192/mimetypes
 Example=user-desktop
 
 [12x12/actions]
@@ -37,7 +37,7 @@ Type=Fixed
 [16x16/devices]
 Size=16
 Context=Devices
-Type=Threshold
+Type=Fixed
 
 [16x16/emblems]
 Size=16
@@ -59,31 +59,6 @@ Size=16
 Context=Status
 Type=Fixed
 
-[192x192/apps]
-Size=192
-Context=Applications
-Type=Fixed
-
-[192x192/categories]
-Size=192
-Context=Categories
-Type=Fixed
-
-[192x192/devices]
-Size=192
-Context=Devices
-Type=Threshold
-
-[192x192/places]
-Size=192
-Context=FileSystems
-Type=Fixed
-
-[192x192/mimetypes]
-Size=192
-Context=MimeTypes
-Type=Fixed
-
 [20x20/status]
 Size=20
 Context=Status
@@ -92,153 +67,167 @@ Type=Fixed
 [24x24/actions]
 Size=24
 Context=Actions
-Type=Fixed
+Type=Scalable
 
 [24x24/apps]
 Size=24
 Context=Applications
-Type=Fixed
+Type=Scalable
 
 [24x24/categories]
 Size=24
 Context=Categories
-Type=Fixed
+Type=Scalable
 
 [24x24/devices]
 Size=24
 Context=Devices
-Type=Threshold
+Type=Scalable
 
 [24x24/emblems]
 Size=24
 Context=Emblems
-Type=Fixed
+Type=Scalable
 
 [24x24/places]
 Size=24
 Context=FileSystems
-Type=Fixed
+Type=Scalable
 
 [24x24/mimetypes]
 Size=24
 Context=MimeTypes
-Type=Fixed
+Type=Scalable
 
 [24x24/status]
 Size=24
 Context=Status
-Type=Fixed
+Type=Scalable
+
+[24x24/animations]
+Size=24
+Context=Animations
+Type=Scalable
 
 [32x32/actions]
 Size=32
 Context=Actions
-Type=Fixed
+Type=Scalable
 
 [32x32/apps]
 Size=32
 Context=Applications
-Type=Fixed
+Type=Scalable
 
 [32x32/categories]
 Size=32
 Context=Categories
-Type=Fixed
+Type=Scalable
 
 [32x32/devices]
 Size=32
 Context=Devices
-Type=Threshold
+Type=Scalable
 
 [32x32/emblems]
 Size=32
 Context=Emblems
-Type=Fixed
+Type=Scalable
 
 [32x32/places]
 Size=32
 Context=FileSystems
-Type=Fixed
+Type=Scalable
 
 [32x32/mimetypes]
 Size=32
 Context=MimeTypes
-Type=Fixed
+Type=Scalable
 
 [32x32/status]
 Size=32
 Context=Status
-Type=Fixed
+Type=Scalable
 
 [36x36/actions]
 Size=36
 Context=Actions
-Type=Fixed
+Type=Scalable
+
+[36x36/animations]
+Size=36
+Context=Animations
+Type=Scalable
 
 [36x36/apps]
 Size=36
 Context=Applications
-Type=Fixed
+Type=Scalable
 
 [36x36/categories]
 Size=36
 Context=Categories
-Type=Fixed
+Type=Scalable
 
 [36x36/devices]
 Size=36
 Context=Devices
-Type=Threshold
+Type=Scalable
 
 [36x36/places]
 Size=36
 Context=FileSystems
-Type=Fixed
+Type=Scalable
 
 [36x36/mimetypes]
 Size=36
 Context=MimeTypes
-Type=Fixed
+Type=Scalable
 
 [48x48/actions]
 Size=48
 Context=Actions
-Type=Fixed
+Type=Scalable
+
+[48x48/animations]
+Size=48
+Context=Animations
+Type=Scalable
 
 [48x48/apps]
 Size=48
 Context=Applications
-Type=Fixed
+Type=Scalable
 
 [48x48/categories]
 Size=48
 Context=Categories
-Type=Fixed
+Type=Scalable
 
 [48x48/devices]
 Size=48
 Context=Devices
-Type=Threshold
+Type=Scalable
 
 [48x48/places]
 Size=48
 Context=FileSystems
-Type=Fixed
+Type=Scalable
 
 [48x48/mimetypes]
 Size=48
 Context=MimeTypes
-Type=Fixed
+Type=Scalable
 
 [48x48/status]
 Size=48
 Context=Status
-Type=Threshold
-MinSize=32
+Type=Scalable
 
 [48x48/emblems]
 Size=48
 Context=Emblems
-Type=Fixed
+Type=Scalable
 
 [72x72/apps]
 Size=72
@@ -273,7 +262,7 @@ Type=Fixed
 [96x96/devices]
 Size=96
 Context=Devices
-Type=Threshold
+Type=Fixed
 
 [96x96/places]
 Size=96
@@ -285,17 +274,27 @@ Size=96
 Context=MimeTypes
 Type=Fixed
 
-[24x24/animations]
-Size=24
-Context=Animations
+[192x192/apps]
+Size=192
+Context=Applications
 Type=Fixed
 
-[36x36/animations]
-Size=36
-Context=Animations
+[192x192/categories]
+Size=192
+Context=Categories
 Type=Fixed
 
-[48x48/animations]
-Size=48
-Context=Animations
+[192x192/devices]
+Size=192
+Context=Devices
+Type=Fixed
+
+[192x192/places]
+Size=192
+Context=FileSystems
+Type=Fixed
+
+[192x192/mimetypes]
+Size=192
+Context=MimeTypes
 Type=Fixed
